# parkinson_pen

./: README.md
Qt/Test_for_parkensonpen/: CMakeLists.txt  Serial.cpp  Serial.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Test_for_parkensonpen/savedata/: 2023_9_14_20_27_30.txt  2023_9_14_20_29_13.txt  2023_9_14_20_3_20.txt  2023_9_14_20_8_12.txt  2023_9_16_21_41_58.txt  2023_9_16_21_43_15.txt  2023_9_16_22_4_22.txt  2023_9_16_22_4_57.txt  2023_9_17_11_20_0.txt  2023_9_17_11_21_21.txt  2023_9_17_11_22_52.txt  2023_9_17_11_24_35.txt  2023_9_8_13_11_9.txt  2023_9_8_13_9_37.txt
Qt/build-Test_for_parkensonpen-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
Qt/build-Test_for_parkensonpen-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
Qt/build-Test_for_parkensonpen-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
Qt/build-Test_for_parkensonpen-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/Test_for_parkensonpen_autogen/: deps
code/: CMakeLists.txt  main.c
code/inc/: MyUart.h  atk_ms901m.h  inv_mpu.h  kalman.h  mpu6050_i2c.h  pid.h
code/src/: MyUart.c  atk_ms901m.c  inv_mpu.c  inv_mpu_dmp_motion_driver.c  kalman.c  mpu6050_i2c.c  pid.c
data_analysis/: data_analysis.ipynb  data_analysis_pd.mlx  dataset_pd.mat  dataset_upd.mat  kalman_dataset.mat  kalman_filter.asv  kalman_filter.m  neng_pd.mat  neng_upd.mat  output.m  wo.m  wo_pd.mat  wo_upd.mat
software/: gcc-arm-none-eabi.txt
(+680 files in other folders)
